<package>
  <name>vision_pipeline</name>
  <version>1.0.0</version>
  <description>Hardware-accelerated computer vision pipeline for Artemis MAVs based on ROS packages</description>
  <author>Patrick Mihelich</author>
  <author>James Bowman</author>
  <author>Mohammed Kabir</author>
  <maintainer email="mhkabir98@gmail.com"> Mohammed Kabir </maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>stereo_image_proc</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>cv_bridge</run_depend>
  <export>
    <metapackage/>
  </export>

</package>
